--- a/package.json
+++ b/package.json
@@ -1,23 +1,8 @@
 {
-  "name": "ai-photo-editor",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+  "name": "pixshop",
+  "version": "1.0.0",
+  "description": "AI Photo Editor. Retouch, apply creative filters, change backgrounds, use color splash, and make professional adjustments to your images using simple text prompts.",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@google/genai": "^1.10.0",
-    "react-image-crop": "^11.0.6",
-    "exifreader": "^4.23.0"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@google/genai": "^1.10.0"
   }
 }
