feat: Add server-side rendering setup
Integrates Express.js to serve the static build output and handle client-side routing for the AI photo editor. Updates `package.json` with Express dependency and `start` script. Modifies `firebase.json` to use Cloud Functions for hosting rewrites. Introduces `server.js` for Express application logic.

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,5 @@
 {
   "hosting": {
-    "public": "dist",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -9,7 +8,10 @@
     "rewrites": [
       {
         "source": "**",
-        "destination": "/index.html"
+        "run": {
+          "serviceId": "pixshop1",
+          "region": "us-central1"
+        }
       }
     ]
   }
