--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "AI Photo Editor. Retouch, apply creative filters, change backgrounds, use color splash, and make professional adjustments to your images using simple text prompts.",
   "scripts": {
-    "build": "mkdir -p dist && cp index.html sw.js manifest.json dist/ && esbuild index.tsx --bundle --outfile=dist/index.js --format=esm --jsx=automatic --external:react --external:react-dom/client --external:react-image-crop --external:exifreader"
+    "build": "mkdir -p dist && cp index.html sw.js manifest.json dist/ && esbuild index.tsx --bundle --outfile=dist/index.js --format=esm --jsx=automatic --external:react --external:react-dom/client --external:react-image-crop --external:exifreader",
+    "start": "node server.js"
   },
   "dependencies": {
     "@google/genai": "^0.12.0",
-    "esbuild": "^0.20.2"
+    "esbuild": "^0.20.2",
+    "express": "^4.19.2"
   }
 }
